tests/syntax/bad/testfile-keyword2-1.scala
class A extendsa B { }
object Main { def main(args: Array[String]) { } }
